<resources>
    <string name="app_name" translatable="false">StratumStatusApp</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->

    <!-- Headers -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_ssh" translatable="false">SSH</string>

    <!-- General settings -->
    <string name="pref_name_title">Name</string>
    <string name="pref_name_default" translatable="false">Player 1</string>

    <string name="pref_api_url_title">API URL</string>
    <string name="pref_api_url_default" translatable="false">http://status.stratum0.org</string>
    <string name="pref_ssh_key_title">SSH Key</string>
    <string name="pref_ssh_key_edit_title">Edit SSH Key …</string>
    <string name="pref_ssh_server_title">SSH Server</string>
    <string name="pref_ssh_server_default" translatable="false">powerberry.fritz.box</string>
    <string name="pref_ssh_user_open_title">Opening user</string>
    <string name="pref_ssh_user_open_default" translatable="false">auf</string>
    <string name="pref_ssh_user_close_title">Closing user</string>
    <string name="pref_ssh_user_close_default" translatable="false">zu</string>
    <string name="pref_ssh_ensure_wlan_title">Only execute in certain wifis</string>
    <string name="pref_ssh_which_wlans_title">Certain wifis</string>

    <!-- SSH private key menu -->
    <string name="pref_privkey_multiline_hint">Paste private key here…</string>
    <string name="pref_privkey_button_export_public_key_text">Export public key …</string>
    <string name="pref_privkey_button_export_private_key_text">Export private key …</string>
    <string name="pref_privkey_button_import_private_key_text">Import private key …</string>
    <string name="pref_privkey_button_generate_text">Generate private key</string>

    <string name="pref_privkey_dialog_title">Private key</string>
    <string name="pref_privkey_dialog_message">Enter passphrase for private key</string>

    <!-- StatusActivity -->

    <string name="button_open_title">Open</string>
    <string name="button_openas_title">Open as …</string>
    <string name="button_close_title">Close</string>
    <string name="text_status_label">Status:</string>
    <string name="text_openedby_label">Opened by:</string>
    <string name="text_since_label">Since:</string>
    <string name="text_lastupdate_label">Last update:</string>
    <string name="text_lastchange_label">Last status change:</string>

    <string name="ssh_door_idle_text">This controls the upper door</string>

    <!-- Global -->

    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_save">Save</string>
    <string name="text_updating">Updating …</string>
    <string name="text_confirm_generate_key">Are you sure you want to generate a new key?</string>

    <string name="status_open">Open</string>
    <string name="status_closed">Closed</string>
    <string name="status_unknown">Unknown</string>
</resources>
